--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -332,6 +332,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: git permission workaround
+        run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          git config --global --add safe.directory /github/workspace
       - uses: actions/cache@v2
         id: cache
         with:
@@ -670,14 +674,14 @@ jobs:
       - name: look at core files
         if: failure()
         run: gdb /home/user/Firmware/build/px4_sitl_default/bin/px4 px4.core -ex "thread apply all bt" -ex "quit"
-  
+
   apm-sitl-newer:
     name: APM SITL ${{ matrix.apm_version }} (ubuntu-20.04)
     runs-on: ubuntu-20.04
-    container: 
+    container:
       image: mavsdk/mavsdk-ubuntu-20.04-apm-sitl-${{ matrix.apm_version }}
       options: --privileged
-      env: 
+      env:
         APM_HOME_LAT: 47.397742
         APM_HOME_LONG: 8.545594
         APM_HOME_ALT: 488.0
