--- a/docker/Dockerfile-Ubuntu-22.04-PX4-SITL-v1.13
+++ b/docker/Dockerfile-Ubuntu-22.04-PX4-SITL-v1.13
@@ -1,8 +1,8 @@
 #
-# PX4 v1.13 SITL testing environment for MAVSDK based on Ubuntu 20.04.
+# PX4 v1.13 SITL testing environment for MAVSDK based on Ubuntu 22.04.
 # Author: Julian Oes <julian@oes.ch>
 #
-FROM mavsdk/mavsdk-ubuntu-20.04
+FROM mavsdk/mavsdk-ubuntu-22.04
 MAINTAINER Julian Oes <julian@oes.ch>
 
 ENV FIRMWARE_DIR ${WORKDIR}../Firmware
@@ -19,7 +19,9 @@ ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 
 RUN git clone https://github.com/PX4/Firmware.git ${FIRMWARE_DIR}
-RUN git -C ${FIRMWARE_DIR} switch release/1.13
+RUN git -C ${FIRMWARE_DIR} checkout v1.13.0
+# We need the updated ubuntu.sh script for Ubuntu 22.04
+RUN git -C ${FIRMWARE_DIR} checkout 1a620b450d235d654751b5f28d882bd426aa6e39 -- Tools/setup/ubuntu.sh
 RUN git -C ${FIRMWARE_DIR} submodule update --init --recursive
 RUN wget http://packages.osrfoundation.org/gazebo.key -O - | sudo apt-key add -
 RUN cd ${FIRMWARE_DIR} && Tools/setup/ubuntu.sh --no-nuttx
