DONT MERGE: use development dialect for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ set(DEPS_INSTALL_PATH "${DEPS_BUILD_PATH}/install" CACHE PATH "Install path for 
 include(GNUInstallDirs)
 
 if (NOT MAVLINK_DIALECT)
-    set(MAVLINK_DIALECT common)
+    set(MAVLINK_DIALECT development)
 endif()
 
 if (MAVLINK_HEADERS)
