--- a/src/mavsdk.pc.in
+++ b/src/mavsdk.pc.in
@@ -3,7 +3,7 @@ exec_prefix=@CMAKE_INSTALL_FULL_BINDIR@
 libdir=@CMAKE_INSTALL_FULL_LIBDIR@
 includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 
-Name: libmavsdk
+Name: MAVSDK
 Description: API and library for MAVLink compatible systems written in C++17
 Version: @MAVSDK_VERSION_STRING@
 Requires.private: libcurl jsoncpp tinyxml2
