Try to make a framework out of libmavsdk.so

--- a/src/mavsdk/CMakeLists.txt
+++ b/src/mavsdk/CMakeLists.txt
@@ -17,6 +17,20 @@ target_link_libraries(mavsdk
     tinyxml2::tinyxml2
 )
 
+# TODO
+set_property(SOURCE module.modulemap
+    PROPERTY MACOSX_PACKAGE_LOCATION "Modules")
+
+# TODO
+set_target_properties(mavsdk PROPERTIES
+    FRAMEWORK TRUE
+    BUILD_WITH_INSTALL_RPATH TRUE
+    INSTALL_NAME_DIR @rpath
+    PUBLIC_HEADER mavsdk_server_api.h
+    #XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "iPhone Developer"
+    MACOSX_FRAMEWORK_INFO_PLIST ${PROJECT_SOURCE_DIR}/mavsdk_server/cmake/MacOSXFrameworkInfo.plist.in
+)
+
 if (NOT APPLE AND NOT ANDROID AND NOT MSVC)
     target_link_libraries(mavsdk
         PRIVATE
