--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,6 @@ jobs:
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/third_party/install" >> $GITHUB_ENV
       - name: Install lcov
         run: sudo apt-get update && sudo apt-get install -y lcov
-      - name: install pymavlink dependencies
-        run: sudo apt-get install -y python3-future
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Coverage -DASAN=ON -DWERROR=OFF -Bbuild -H.
       - name: build
@@ -61,8 +59,6 @@ jobs:
           submodules: recursive
       - name: install
         run: sudo apt-get update && sudo apt-get install -y libjsoncpp-dev libcurl4-openssl-dev libtinyxml2-dev
-      - name: install pymavlink dependencies
-        run: sudo apt-get install -y python3-future
       - name: configure
         run: cmake -DCMAKE_BUILD_TYPE=Release -DSUPERBUILD=OFF -DWERROR=OFF -Bbuild/release -H.
       - name: build
@@ -90,8 +86,6 @@ jobs:
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/release/third_party/install" >> $GITHUB_ENV
-      - name: install pymavlink dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-future
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DBUILD_MAVSDK_SERVER=ON -DWERROR=OFF -Bbuild/release -H.
       - name: build
@@ -130,8 +124,6 @@ jobs:
         with:
           path: ~/.hunter
           key: ${{ github.job }}-${{ hashFiles('~/.hunter/**') }}
-      - name: install pymavlink dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-future
       - name: prepare mavlink headers because this is without superbuild
         run: tools/generate_mavlink_headers.sh
       - name: configure
@@ -152,8 +144,6 @@ jobs:
           submodules: recursive
       - name: install clang-format
         run: sudo apt-get update && sudo apt-get install -y clang-format-12
-      - name: install pymavlink dependencies
-        run: sudo apt-get install -y python3-future
       - uses: actions/cache@v2
         id: cache
         with:
@@ -180,8 +170,6 @@ jobs:
           submodules: recursive
       - name: install dependencies
         run: sudo apt-get update && sudo apt-get install -y doxygen clang-format-12
-      - name: install pymavlink dependencies
-        run: sudo apt-get install -y python3-future
       - name: check style
         run: ./tools/fix_style.sh .
       - name: check docs
@@ -209,9 +197,7 @@ jobs:
           wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | sudo apt-key add -
           sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ bionic main'
           sudo apt-get update
-          sudo apt-get install -y cmake
-      - name: install pymavlink dependencies
-        run: sudo apt-get install -y python3-future
+          sudo apt-get install -y cmake python3-pip
       - name: configure
         run: cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_MAVSDK_SERVER=OFF -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=install -DWERROR=OFF -Bbuild/release -H.
       - name: build
@@ -239,8 +225,6 @@ jobs:
           fetch-depth: 0
       - name: install packages
         run: sudo apt-get update && sudo apt-get install -y build-essential debhelper fakeroot libjsoncpp-dev libcurl4-openssl-dev libtinyxml2-dev libjsoncpp1 libcurl4 libtinyxml2-6a
-      - name: install pymavlink dependencies
-        run: sudo apt-get install -y python3-future
       - name: prepare mavlink headers because this is without superbuild
         run: tools/generate_mavlink_headers.sh
       - name: generate changelog
@@ -292,8 +276,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: install pymavlink dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3 python3-future
       - name: prepare mavlink headers
         run: tools/generate_mavlink_headers.sh
       - name: setup dockcross
@@ -328,7 +310,7 @@ jobs:
     container: alpine:3.16.0
     steps:
       - name: install tools
-        run: apk update && apk add build-base cmake git linux-headers perl tar python3 py3-future
+        run: apk update && apk add build-base cmake git linux-headers perl tar python3 py3-pip
       - uses: actions/checkout@v2
         with:
           submodules: recursive
@@ -381,7 +363,7 @@ jobs:
         with:
           submodules: recursive
       - name: install pymavlink dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3 python3-future
+        run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
       - name: prepare mavlink headers
         run: tools/generate_mavlink_headers.sh
       - name: setup dockcross
@@ -427,7 +409,7 @@ jobs:
         with:
           submodules: recursive
       - name: install pymavlink dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3 python3-future
+        run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
       - name: prepare mavlink headers
         run: tools/generate_mavlink_headers.sh
       - name: setup dockcross
@@ -482,8 +464,6 @@ jobs:
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/macos/third_party/install" >> $GITHUB_ENV
       - name: set SDKROOT value
         run: echo "SDKROOT=$(xcrun --sdk macosx --show-sdk-path)" >> $GITHUB_ENV
-      - name: install pymavlink dependencies
-        run: python3 -m pip install future
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/macos/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DMACOS_FRAMEWORK=${{ matrix.build-framework }} -DWERROR=OFF -Bbuild/macos -H.
       - name: build
@@ -540,8 +520,6 @@ jobs:
       - name: set SDK-related environment variables (for non-cmake deps)
         run: |
           echo "SDKROOT=$(xcrun --sdk ${{ matrix.sdk }} --show-sdk-path)" >> $GITHUB_ENV
-      - name: install pymavlink dependencies
-        run: python3 -m pip install future
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DENABLE_STRICT_TRY_COMPILE=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DPLATFORM=${{ matrix.platform }} -DDEPLOYMENT_TARGET=13.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -Bbuild/${{ matrix.name }} -H.
       - name: build
@@ -623,7 +601,6 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install wheel
-          python3 -m pip install future
       - name: configure
         run: cmake -G "Visual Studio 17 2022" $env:superbuild $env:cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/release/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -Bbuild/release -S.
       - name: build
@@ -666,8 +643,6 @@ jobs:
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config --global --add safe.directory /github/workspace
-      - name: install pymavlink dependencies
-        run: python3 -m pip install future
       - name: test
         run: PX4_VERSION=${{ matrix.px4_version }} tools/run-sitl-tests.sh /home/user/Firmware
         timeout-minutes: 45
@@ -700,8 +675,6 @@ jobs:
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config --global --add safe.directory /github/workspace
-      - name: install pymavlink dependencies
-        run: python3 -m pip install future
       - name: test
         run: APM_VERSION=${{ matrix.apm_version }} tools/run-sitl-tests.sh /home/user/ArduPilot
         timeout-minutes: 45
