--- a/docker/Dockerfile-Fedora-36
+++ b/docker/Dockerfile-Fedora-36
@@ -26,7 +26,7 @@ RUN dnf -y install \
     ninja-build \
     perl-FindBin \
     python \
-    python-future \
+    python-pip \
     redhat-rpm-config \
     rpm-build \
     ruby-devel \
