workflows: another attempt at buliding for iOS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -524,6 +524,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install wheel
+          python3 -m pip install future
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DENABLE_STRICT_TRY_COMPILE=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DPLATFORM=${{ matrix.platform }} -DDEPLOYMENT_TARGET=13.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -Bbuild/${{ matrix.name }} -H.
       - name: build
