cmake: copy correct mavlink directory
Hopefully, this time I get it right.

--- a/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
+++ b/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
@@ -17,6 +17,6 @@ install(FILES
 )
 
 install(DIRECTORY
-    ${MAVLINK_HEADERS}
+    ${MAVLINK_HEADERS}/mavlink
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/mavlink_passthrough
 )
