Updated geofence integration test and example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,7 +19,7 @@ add_subdirectory(fly_qgc_mission)
 add_subdirectory(follow_me)
 add_subdirectory(ftp_client)
 add_subdirectory(ftp_server)
-add_subdirectory(geofence_inclusion)
+add_subdirectory(geofence)
 add_subdirectory(gimbal)
 add_subdirectory(gimbal_device_tester)
 add_subdirectory(logfile_download)
