--- a/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
+++ b/src/mavsdk/plugins/mavlink_passthrough/CMakeLists.txt
@@ -7,7 +7,7 @@ target_sources(mavsdk
 target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/../../../mavsdk/core/>
-    $<INSTALL_INTERFACE:include>
+    $<INSTALL_INTERFACE:include/mavsdk>
     )
 
 install(FILES
