examples: add example to set SiK NET ID
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -29,6 +29,7 @@ add_subdirectory(multiple_drones)
 add_subdirectory(offboard)
 add_subdirectory(parachute)
 add_subdirectory(set_actuator)
+add_subdirectory(setup_sik_radio)
 add_subdirectory(sniffer)
 add_subdirectory(system_info)
 add_subdirectory(takeoff_and_land)
