--- a/src/MAVSDKConfig.cmake.in
+++ b/src/MAVSDKConfig.cmake.in
@@ -1,5 +1,7 @@
 include(CMakeFindDependencyMacro)
 
+find_dependency(MAVLink)
+
 if(NOT @BUILD_SHARED_LIBS@)
     if(${CMAKE_VERSION} VERSION_LESS "3.9.0")
         find_package(CURL REQUIRED CONFIG)
@@ -7,6 +9,7 @@ if(NOT @BUILD_SHARED_LIBS@)
         find_dependency(CURL REQUIRED CONFIG)
     endif()
 
+    find_dependency(Threads)
     find_dependency(jsoncpp)
     find_dependency(tinyxml2)
 
