--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Depends: libmavsdk0 (= ${binary:Version}), ${misc:Depends}
 Description: MAVSDK API for Mavlink-controlled vehicles
  This provides the development headers for the mavsdk C++ library.
 
-Package: libmavsdk0
+Package: libmavsdk
 Architecture: any
 Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}, libjsoncpp1, libcurl4, libtinyxml2-6a
