core: split MavlinkFtp into server and client
This includes:
- Refactor of server and client
- Slight API changes
- Using std::filesystem as much as possible everywhere.
- Adding system tests

Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -22,14 +22,14 @@ target_sources(mavsdk
     system.cpp
     system_impl.cpp
     flight_mode.cpp
-    fs.cpp
     mavsdk.cpp
     mavsdk_impl.cpp
     http_loader.cpp
     mavlink_channels.cpp
     mavlink_command_receiver.cpp
     mavlink_command_sender.cpp
-    mavlink_ftp.cpp
+    mavlink_ftp_client.cpp
+    mavlink_ftp_server.cpp
     mavlink_mission_transfer.cpp
     mavlink_parameter_cache.cpp
     mavlink_parameter_client.cpp
@@ -147,7 +147,6 @@ list(APPEND UNIT_TEST_SOURCES
     ${PROJECT_SOURCE_DIR}/mavsdk/core/cli_arg_test.cpp
     ${PROJECT_SOURCE_DIR}/mavsdk/core/curl_test.cpp
     ${PROJECT_SOURCE_DIR}/mavsdk/core/locked_queue_test.cpp
-    ${PROJECT_SOURCE_DIR}/mavsdk/core/fs_test.cpp
     ${PROJECT_SOURCE_DIR}/mavsdk/core/geometry_test.cpp
     # TODO: add this again
     #${PROJECT_SOURCE_DIR}/mavsdk/core/http_loader_test.cpp
