--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -9,6 +9,16 @@ add_executable(system_tests_runner
     param_get_all.cpp
     mission_raw_upload.cpp
     telemetry_subscription.cpp
+    fs_helpers.cpp
+    ftp_download_file.cpp
+    ftp_download_file_burst.cpp
+    ftp_remove_file.cpp
+    ftp_upload_file.cpp
+    ftp_rename_file.cpp
+    ftp_create_dir.cpp
+    ftp_remove_dir.cpp
+    ftp_compare_files.cpp
+    ftp_list_dir.cpp
 )
 
 target_include_directories(system_tests_runner
