rtk: parse Python RTCM strings
This adds a hack to parse incoming RTCM string from Python. Since they
are somewhat escaped we need to translate them back to the original
bytes.

We do this in v1.4 in order not to break the API. In v2, we hopefully
can switch to a vector<uint8_t> instead.

Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/mavsdk/plugins/rtk/CMakeLists.txt
+++ b/src/mavsdk/plugins/rtk/CMakeLists.txt
@@ -13,3 +13,8 @@ install(FILES
     include/plugins/rtk/rtk.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/rtk
 )
+
+list(APPEND UNIT_TEST_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/rtk_parse_test.cpp
+)
+set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
