--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(integration_tests_runner
     camera_take_photo.cpp
     camera_take_photo_interval.cpp
     camera_format.cpp
+    camera_reset_settings.cpp
     camera_test_helpers.cpp
     connection.cpp
     follow_me.cpp
